# boxkite

./: .env.example  .gcloudignore  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  PYPI_README.md  README.md  SECURITY.md  pyproject.toml
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  dependabot.yml
bastion/: Dockerfile  README.md  pyproject.toml
bastion/src/boxkite_bastion/: __init__.py  auth_bridge.py  bridge.py  config.py  rate_limit.py  server.py
bastion/tests/: test_auth_bridge.py  test_bridge.py  test_config.py  test_dependency_pins.py  test_integration_smoke.py  test_rate_limit.py  test_server.py
control-plane/: .env.example  Dockerfile  pyproject.toml  requirements.txt
control-plane/migrations/: env.py
control-plane/migrations/versions/: 8d1eeb33637d_baseline.py  a1b2c3d4e5f6_add_idempotency_keys.py  b2c3d4e5f6a7_add_organizations.py  c3d4e5f6a7b8_add_organization_invites.py  e419cdafd64d_add_trust_tier_to_secrets.py
control-plane/scripts/: generate_schema_sql.py  verify_exec_log_chain.py
control-plane/src/control_plane/: __init__.py  audit_chain.py  audit_chain_lock.py  config.py  db.py  demo_account.py  deps.py  email_sender.py  enterprise_sso_client.py  errors.py  host_safety.py  hosted_mcp.py  idempotency.py  image_builder.py  main.py  mcp_catalog.py  migrations_runner.py  models_orm.py  oauth_consent.py  oauth_providers.py  oauth_session.py  observability.py  pty_recording.py  rate_limit.py  reaper.py  repository.py  schema.sql  schemas.py  secret_capability.py  secrets_kms.py  security.py  storage_client.py  usage_policy.py  volume_builder.py  webhook_delivery.py  webhooks.py
control-plane/src/control_plane/routers/: account.py  admin.py  api_keys.py  auth.py  demo_playground.py  enterprise_sso.py  images.py  internal_secrets.py  mcp_connections.py  oauth.py  organizations.py  sandboxes.py  scim.py  secrets.py  snapshots.py  social_login.py  usage.py  volumes.py  webhooks.py
control-plane/tests/: _pg_lock_race_worker.py  conftest.py  test_account_allowed_commands.py  test_account_endpoint.py  test_account_linking.py  test_admin_audit_log.py  test_admin_metrics.py  test_api_key_last_used.py  test_api_keys.py  test_auth.py  test_chaos_control_plane_restart.py  test_chaos_reservation_row_cleanup.py  test_config_api_docs.py  test_config_database_url_normalization.py  test_create_session_race.py  test_create_session_race_postgres.py  test_dashboard_jwt_endpoints.py  test_demo_playground.py  test_email_sender.py  test_email_verification.py  test_enterprise_sso.py  test_exec_log_chain.py  test_exec_log_chain_concurrency.py  test_exec_log_entries.py  test_fault_injection.py  test_global_concurrency_limit.py  test_gpu_sandbox_create.py  test_host_safety.py  test_hosted_mcp.py  test_idempotency.py  test_image_builder_dockerfile.py  test_image_builder_hardening.py  test_image_builder_run_build.py  test_internal_secrets.py  test_mcp_catalog.py  test_mcp_connections.py  test_mcp_oauth.py  test_migrations.py  test_observability.py  test_organization_invites.py  (+39 more)
deploy/: COLD-START-TUNING.md  bastion.yaml  docker-compose.yml  full-state-snapshot-rbac-optin.yaml  image-builder-job.yaml  image-builder-network-policy.yaml  image-builder-rbac.yaml  network-policy-permissive-optin.yaml  network-policy.yaml  package-lock.json  package.json  pinned-checksums-verification.json  pod-security-policy.yaml  pod-template-kata.yaml  pod-template.yaml  rbac.yaml  render.yaml  requirements.txt  sandbox-claude-code.Dockerfile  sandbox-desktop.Dockerfile  sandbox-go.Dockerfile  sandbox-lsp.Dockerfile  sandbox-minimal.Dockerfile  sandbox-nextjs.Dockerfile  sandbox-node.Dockerfile  sandbox-rust.Dockerfile  sandbox.Dockerfile  sidecar.Dockerfile
docs/: handoff-adapters.md
examples/: README.md
handoff-cli/: README.md  pyproject.toml
handoff-cli/src/boxkite_handoff/: __init__.py  cli.py  core.py  orchestrator.py  terminal.py
handoff-cli/src/boxkite_handoff/adapters/: __init__.py  claude_code.py  codex.py  cursor.py  opencode.py
handoff-cli/tests/: test_adapter_claude_code.py  test_adapter_codex.py  test_adapter_cursor.py  test_adapter_opencode.py  test_cli.py  test_core.py  test_integration_real_client.py  test_orchestrator.py  test_terminal.py
mcp-server/: README.md  pyproject.toml
mcp-server/src/boxkite_mcp/: __init__.py  server.py
mcp-server/tests/: live_smoke.py  test_server.py
scripts/: benchmark_suite.py  benchmark_warm_pool.py  verify-kata-live.sh  verify-pinned-checksums.sh
sdk-go/: README.md  account.go  account_test.go  client.go  client_options_test.go  client_test.go  desktop.go  desktop_test.go  errors.go  errors_test.go  example_test.go  exec.go  exec_test.go  files.go  files_test.go  go.mod  images.go  images_test.go  log.go  log_test.go  mcp_connections.go  mcp_connections_test.go  preview.go  preview_test.go  processes.go  processes_test.go  ptr.go  retry_test.go  sandbox.go  sandbox_test.go  secrets.go  secrets_test.go  session.go  session_delegation_test.go  session_test.go  takeover.go  takeover_test.go  testhelpers_test.go  volumes.go  volumes_test.go  (+2 more)
sdk-js/: README.md  (+3 more)
sdk-python/: README.md  pyproject.toml
sdk-python/examples/: quickstart.py  webhooks.py
sdk-python/src/boxkite_client/: __init__.py  client.py  exceptions.py  langchain_tools.py
sdk-python/tests/: test_async_client.py  test_client.py  test_langchain_tools.py  test_retry.py
sdk-rust/: Cargo.toml  README.md
sdk-rust/examples/: quickstart.rs  webhooks.rs
sdk-rust/src/: account.rs  audit.rs  client.rs  desktop.rs  error.rs  files.rs  images.rs  lib.rs  lsp.rs  mcp_connections.rs  preview.rs  processes.rs  sandboxes.rs  secrets.rs  session.rs  takeover.rs  volumes.rs  webhooks.rs
sdk-rust/tests/: account_test.rs  audit_test.rs  desktop_test.rs  error_handling_test.rs  files_test.rs  http_request_test.rs  images_test.rs  lsp_test.rs  mcp_connections_test.rs  preview_test.rs  processes_test.rs  retry_test.rs  sandboxes_test.rs  secrets_test.rs  session_test.rs  takeover_test.rs  volumes_test.rs  webhooks_test.rs
sdk-rust/tests/common/: mod.rs
(+293 files in other folders)
