[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
# PyPI distribution name is "boxkite-sandbox" — the plain "boxkite" name was
# already taken on PyPI. This does NOT change the import path: the package
# directory stays `src/boxkite/`, so `import boxkite` keeps working exactly
# as before. Same split as `beautifulsoup4` (dist name) vs `bs4` (import
# name) — pip installs "boxkite-sandbox", code imports "boxkite".
name = "boxkite-sandbox"
version = "0.2.1"
description = "A self-hostable, Kubernetes-native sandbox for agent code execution — pod-per-session isolation plus a complete bash/python/file tool surface."
# PYPI_README.md is a short, PyPI-page-specific readme -- deliberately
# distinct from README.md (the repo's GitHub front door, which stays full
# depth: security model, CLI reference, all runtime modes). GitHub always
# renders root README.md regardless of this field, so this only affects
# what shows on the PyPI package page.
readme = "PYPI_README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "boxkite contributors" }]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries",
    "Topic :: System :: Distributed Computing",
    "Topic :: Security",
]

dependencies = [
    "httpx>=0.27,<1",
    "kubernetes_asyncio>=29.0.0",
    "aiohttp>=3.10,<4",
    "typer>=0.12,<1",
    # Per-pod self-signed TLS cert generation for manager-to-sidecar
    # transport (see src/boxkite/tls.py, docs/SIDECAR-TRANSPORT-TLS-DESIGN.md).
    # Already an indirect dependency via azure-identity/msal in some
    # deployments, but this package uses it directly now, so it's pinned
    # here explicitly rather than relying on that transitive path.
    "cryptography>=42",
    # `boxkite mcp init codex` writes ~/.codex/config.toml -- reading is
    # stdlib tomllib (3.11+), but tomllib has no writer, hence tomli-w.
    "tomli-w>=1.0,<2",
]

[project.urls]
Homepage = "https://github.com/EvAlssment/boxkite"
Repository = "https://github.com/EvAlssment/boxkite"
Issues = "https://github.com/EvAlssment/boxkite/issues"

[project.optional-dependencies]
# The sandbox tool surface (src/boxkite/tools/) is framework-agnostic by
# default (see boxkite.tools.create_sandbox_tool_specs) and has no
# LangChain/LangGraph dependency at all. Install this extra only if you
# want boxkite.tools.create_sandbox_tools()/create_bash_tool()/etc. (or
# boxkite.tools.adapters.to_langchain_tools) to hand back LangChain
# BaseTool objects directly. Mirrors sdk-python/pyproject.toml's own
# `langchain` extra for the hosted-client package.
langchain = [
    "langchain-core>=1.0,<2",
]
# Install this extra only if you want boxkite.tools.adapters.to_llamaindex_tools
# to hand back LlamaIndex FunctionTool objects for a ReActAgent/FunctionAgent.
# llama-index-core pulls in pydantic itself, which the schema-conversion
# helper in adapters.py relies on -- no separate pydantic pin needed here.
llamaindex = [
    "llama-index-core>=0.11,<1",
]
# Install this extra only if you want boxkite.tools.adapters.to_openai_agents_tools
# to hand back agents.tool.FunctionTool objects for the OpenAI Agents SDK's
# Agent(tools=[...]). See adapters.py's own module docstring for why this is
# a function-tool-level integration, not the deeper native sandbox-provider
# protocol E2B/Modal/Daytona implement there.
openai-agents = [
    "openai-agents>=0.18,<1",
]
# Test suite exercises the framework-agnostic core and the LangChain,
# LlamaIndex, and OpenAI Agents SDK adapters (tests/test_bash_tool.py,
# tests/test_tool_factory.py, tests/test_search_tools.py,
# tests/test_tools_adapters.py), so dev pulls in all three extras.
dev = [
    "boxkite-sandbox[langchain,llamaindex,openai-agents]",
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "pytest-cov>=5.0",
    "ruff>=0.6",
    "pip-audit>=2.7",
]

[project.scripts]
boxkite = "boxkite.cli:app"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
markers = [
    "pr: fast tests suitable for pre-merge gating",
    "integration: real, non-mocked tests against an external toolchain (network/binary dependent); skips gracefully when unavailable",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
# Correctness-only for now (undefined names, unused imports/vars, syntax
# errors) — style rules like import sorting/line-length are deliberately
# left out so this doesn't turn into a repo-wide reformat unrelated to the
# job this config exists for (catching real bugs in CI).
select = ["F"]

[tool.ruff.lint.per-file-ignores]
# manager.py's mixin split (GitHub issue #71) shares module-level config,
# state, and helper functions across SandboxManager's mixin classes via
# `from ._manager_config import *` rather than explicit per-name imports --
# a deliberate choice, not an oversight: the pre-split file had all of this
# in one module's global scope, and every mixin needs the same shared
# surface (constants, env-derived config, small helpers) SandboxManager
# itself composes back together. F403/F405 would otherwise flag every one
# of those genuinely-defined names as "may be undefined" across all eleven
# files in this split -- noise, not a real correctness signal, since the
# names are provided by _manager_config.py's own `import *` and verified by
# the existing test suite (which exercises every mixin through
# SandboxManager directly). Re-evaluate if this module ever moves to
# explicit imports.
"src/boxkite/manager.py" = ["F403", "F405"]
# _manager_config.py is the shared re-export hub every other mixin module
# star-imports from -- every name it imports is intentionally imported
# FOR re-export via its own `import *`, not for local use in this file, so
# F401 ("imported but unused") is expected here specifically, not a real
# unused-import bug.
"src/boxkite/_manager_config.py" = ["F401", "F403", "F405"]
"src/boxkite/_manager_create.py" = ["F403", "F405"]
"src/boxkite/_manager_files_skills.py" = ["F403", "F405"]
"src/boxkite/_manager_http_client.py" = ["F403", "F405"]
"src/boxkite/_manager_metadata.py" = ["F403", "F405"]
"src/boxkite/_manager_proxy.py" = ["F403", "F405"]
"src/boxkite/_manager_recovery.py" = ["F403", "F405"]
"src/boxkite/_manager_sessions_lookup.py" = ["F403", "F405"]
"src/boxkite/_manager_tls_auth.py" = ["F403", "F405"]
"src/boxkite/_manager_warm_pool.py" = ["F403", "F405"]
