[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "boxkite-control-plane"
version = "0.1.0"
description = "Multi-tenant control-plane API for boxkite: accounts, API keys, and fair-use-limited sandbox session management on top of SandboxManager/WarmPoolManager."
requires-python = ">=3.11"
license = { text = "FSL-1.1-Apache-2.0" }
authors = [{ name = "boxkite contributors" }]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3.11",
    "Topic :: Internet :: WWW/HTTP :: HTTP Servers",
]

dependencies = [
    # NOTE: `boxkite` itself (SandboxManager/WarmPoolManager) is a local,
    # unpublished sibling package in this monorepo (../src/boxkite), not on
    # PyPI. PEP 508 direct references only accept absolute file:// URLs, so it
    # can't be pinned relatively here — install it explicitly first (see
    # requirements.txt / README "Local development"):
    #   pip install -e ..
    #   pip install -e .[dev]
    "fastapi>=0.115,<1",
    "uvicorn[standard]>=0.30,<1",
    "pydantic>=2.9,<3",
    "pydantic-settings>=2.5,<3",
    "sqlalchemy[asyncio]>=2.0,<3",
    "asyncpg>=0.29,<1",
    # Schema migrations (migrations/versions/) -- db.py's init_schema()
    # runs these at startup instead of Base.metadata.create_all(), the
    # only mechanism that can actually ALTER an existing, already-populated
    # table rather than silently no-op on it.
    "alembic>=1.13,<2",
    "passlib[argon2]>=1.7,<2",
    "argon2-cffi>=23.1,<26",
    "pyjwt>=2.9,<3",
    "email-validator>=2.2,<3",
    # Used unconditionally by secrets_kms.py's AES-256-GCM envelope
    # encryption, for both the AWS-KMS and local-dev backends -- not
    # optional the way boto3/azure-storage-blob are below.
    "cryptography>=42",
    # Used unconditionally by webhook_delivery.py's outbound HTTP POST to a
    # caller-registered webhook URL (docs/WEBHOOKS-DESIGN.md) -- previously
    # only a `dev`-extra (test-only, via httpx's ASGI transport); promoted
    # here because this module now makes a real outbound HTTP call at
    # runtime, not just in tests.
    "httpx>=0.27,<1",
    # Model Context Protocol SDK -- backs hosted_mcp.py's Streamable HTTP
    # /mcp endpoint (docs/HOSTED-MCP-DESIGN.md). Distinct from mcp-server/'s
    # own use of this same SDK for the local stdio boxkite-mcp package --
    # the two share no code, they just both build on the same upstream SDK.
    "mcp>=1.2",
    # Outbound calls to GitHub's/Google's OAuth token and userinfo endpoints
    # for social login (docs/MCP-OAUTH-AND-SOCIAL-LOGIN-DESIGN.md) -- was
    # dev-only (tests used it to mock the control-plane's own API), now also
    # a runtime dependency.
    "httpx>=0.27,<1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "pytest-cov>=5.0",
    "aiosqlite>=0.20,<1",
]
# Only needed to actually exercise storage_client.py's real S3/Azure
# clients (filesystem snapshot create/restore/delete) -- lazily imported
# there so a deployment with the snapshot feature disabled, and every test
# in this suite (which uses FakeSnapshotStorageClient), never needs these.
snapshots = [
    "boto3>=1.34,<2",
    "azure-storage-blob>=12.19,<13",
    "azure-identity>=1.15,<2",
]
# Only needed for AwsKmsSecretsClient/AzureKeyVaultSecretsKmsClient/
# GcpCloudKmsSecretsKmsClient (SECRETS_KMS_BACKEND=aws/azure/gcp) -- each is
# lazily imported inside its own class's __init__, so a deployment using
# LocalDevSecretsKmsClient (or only one of the three cloud backends) never
# needs the other SDKs installed. Deliberately not folded into the
# `snapshots` extra above: unrelated feature, and docs/SECRETS-DESIGN.md's
# own guidance is "no reason to couple them."
secrets = [
    "boto3>=1.34,<2",
    "azure-keyvault-keys>=4.9,<5",
    "azure-identity>=1.15,<2",
    "google-cloud-kms>=2.19,<3",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
