[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "boxkite-client"
version = "0.2.1"
description = "Python client for a hosted boxkite control-plane (sandbox creation, exec, files, LangChain tools)."
readme = "README.md"
license = { text = "Apache-2.0" }
requires-python = ">=3.10"
dependencies = [
    "httpx>=0.27",
    "websockets>=13",
]

[project.optional-dependencies]
langchain = ["langchain-core>=0.3"]
dev = ["pytest>=8", "ruff>=0.6"]

[project.urls]
Homepage = "https://github.com/EvAlssment/boxkite"
Repository = "https://github.com/EvAlssment/boxkite"
Issues = "https://github.com/EvAlssment/boxkite/issues"

[tool.setuptools.packages.find]
where = ["src"]
