[package]
name = "boxkite-client"
version = "0.1.0"
edition = "2021"
rust-version = "1.75"
description = "Rust client for a hosted boxkite control-plane (sandboxes, exec, files, audit log, human takeover)"
license-file = "../LICENSE"
repository = "https://github.com/HarshitKmr10/boxkite"
readme = "README.md"
keywords = ["sandbox", "agent", "code-execution", "boxkite"]
categories = ["api-bindings", "asynchronous"]

[dependencies]
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "stream"] }
reqwest-eventsource = "0.6"
tokio-tungstenite = { version = "0.30", features = ["rustls-tls-webpki-roots"] }
tokio = { version = "1", features = ["net"] }
url = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
async-stream = "0.3"
futures-util = "0.3"

[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt-multi-thread", "test-util"] }
wiremock = "0.6"
hmac = "0.12"
sha2 = "0.10"
hex = "0.4"
